feat: juncao de todos os datasets, agrupando os meses em um unico dataframe para análise

--- a/main.ipynb
+++ b/main.ipynb
@@ -30,7 +30,8 @@
     "base_airbnb = pd.DataFrame()\n",
     "for file in base_path.iterdir():\n",
     "    if file.name.endswith(\".csv\"):\n",
-    "        month_df = pd.read_csv(base_path / file.name)\n"
+    "        month_df = pd.read_csv(base_path / file.name)\n",
+    "        base_airbnb = pd.concat([base_airbnb, month_df], ignore_index=True)\n"
    ]
   }
  ],
