extracao do mes e ano onde a qual os dados pertecem, possivelmente util para a análise

--- a/main.ipynb
+++ b/main.ipynb
@@ -31,6 +31,9 @@
     "for file in base_path.iterdir():\n",
     "    if file.name.endswith(\".csv\"):\n",
     "        month_df = pd.read_csv(base_path / file.name)\n",
+    "        month_df['last_scraped'] = pd.to_datetime(month_df['last_scraped'])\n",
+    "        month_df['year'] = month_df['last_scraped'].dt.year\n",
+    "        month_df['month'] = month_df['last_scraped'].dt.month\n",
     "        base_airbnb = pd.concat([base_airbnb, month_df], ignore_index=True)\n"
    ]
   }
