chore: revisão de colunas a manter para análise / Limpeza de dados desnecessarios

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bb18d58c",
+   "id": "69bb1d6f",
    "metadata": {},
    "source": [
     "##### Importacao de bibliotecas e banco de dados"
@@ -35,6 +35,84 @@
     "        month_df['year'] = month_df['last_scraped'].dt.year\n",
     "        month_df['month'] = month_df['last_scraped'].dt.month\n",
     "        base_airbnb = pd.concat([base_airbnb, month_df], ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2fa9f6b",
+   "metadata": {},
+   "source": [
+    "##### Limpeza do dataset\n",
+    "\n",
+    "Como tempo muitas colunas no nosso dataset, o modelo fica mais lento.\n",
+    "\n",
+    "Uma análise será feita para retirar as colunas que não serão necessárias para o nosso modelo de previsao.\n",
+    "\n",
+    "colunas que serão excluídas:\n",
+    "\n",
+    "- IDs, links e informações nao relevantes ao modelo.\n",
+    "- criada colunas separadas para ano e mes de extracao (mais util para a análise), excluindo a coluna com a data completa\n",
+    "- Colunas preenchidas com texto livre (nao será utilizado nenhuma análise de palavras, ou LLM, focando-se um modelo mais simples)\n",
+    "- colunas com todos (ou proximo a isso) são iguais\n",
+    "- precos que nao sejam diarios\n",
+    "- informacoes fiscais exigidas (análise busca verificar características do imovel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c78d0dba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(list(base_airbnb.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e25eebef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = [\n",
+    "    \"host_response_time\",\n",
+    "    \"host_response_rate\",\n",
+    "    \"host_is_superhost\",\n",
+    "    \"host_listings_count\",\n",
+    "    \"latitude\",\n",
+    "    \"longitude\",\n",
+    "    \"property_type\",\n",
+    "    \"room_type\",\n",
+    "    \"accommodates\",\n",
+    "    \"bathrooms\",\n",
+    "    \"bedrooms\",\n",
+    "    \"beds\",\n",
+    "    \"bed_type\",\n",
+    "    \"amenities\",\n",
+    "    \"price\",\n",
+    "    \"security_deposit\",\n",
+    "    \"cleaning_fee\",\n",
+    "    \"guests_included\",\n",
+    "    \"extra_people\",\n",
+    "    \"minimum_nights\",\n",
+    "    \"maximum_nights\",\n",
+    "    \"number_of_reviews\",\n",
+    "    \"review_scores_rating\",\n",
+    "    \"review_scores_accuracy\",\n",
+    "    \"review_scores_cleanliness\",\n",
+    "    \"review_scores_checkin\",\n",
+    "    \"review_scores_communication\",\n",
+    "    \"review_scores_location\",\n",
+    "    \"review_scores_value\",\n",
+    "    \"instant_bookable\",\n",
+    "    \"is_business_travel_ready\",\n",
+    "    \"cancellation_policy\",\n",
+    "    \"year\",\n",
+    "    \"month\",\n",
+    "]\n",
+    "base_airbnb = base_airbnb.loc[:, columns]\n",
+    "display(base_airbnb)"
    ]
   }
  ],
