chore: inicio de verificacao de colunas nulas, colunas com grande numero de valores nulo também excluidas da análise

--- a/main.ipynb
+++ b/main.ipynb
@@ -114,6 +114,20 @@
     "base_airbnb = base_airbnb.loc[:, columns]\n",
     "display(base_airbnb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed77a10d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(base_airbnb.isnull().sum())\n",
+    "for column in base_airbnb:\n",
+    "    if base_airbnb[column].isnull().sum() > 300000:\n",
+    "        base_airbnb = base_airbnb.drop(column, axis=1)\n",
+    "print(base_airbnb.shape)"
+   ]
   }
  ],
  "metadata": {
