feat: análise para dados nulos potencialmente prejudiciais ao modelo de análise

--- a/main.ipynb
+++ b/main.ipynb
@@ -116,6 +116,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aea426a6",
+   "metadata": {},
+   "source": [
+    "#### Tratando dados Faltantes\n",
+    "\n",
+    "Visualizando os dados, percebemos que existem uma grande disparidade em dados faltantes.\n",
+    "- as colunas comm mais de 300 mil valores nulos foram excluidas da análise\n",
+    "- Para as demais colunas, como temos mais de 900 mil linhas, vamos simplesmente exlcuir com os dados nulos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ed77a10d",
@@ -126,6 +138,18 @@
     "for column in base_airbnb:\n",
     "    if base_airbnb[column].isnull().sum() > 300000:\n",
     "        base_airbnb = base_airbnb.drop(column, axis=1)\n",
+    "print(base_airbnb.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77c7797b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_airbnb = base_airbnb.dropna()\n",
+    "print(base_airbnb.isnull().sum())\n",
     "print(base_airbnb.shape)"
    ]
   }
