feat: análise dos tipos de dados das colunas e tranformacao de tipo de dados incorretos

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import numpy as np"
    ]
   },
   {
@@ -151,6 +152,41 @@
     "base_airbnb = base_airbnb.dropna()\n",
     "print(base_airbnb.isnull().sum())\n",
     "print(base_airbnb.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfbf2b6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(base_airbnb.dtypes)\n",
+    "print(\"-\"*60)\n",
+    "print(base_airbnb.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af4bb400",
+   "metadata": {},
+   "source": [
+    "Como preço e extra_people estão sendo reconhecidos como objeto ao ines de float, tempo de mudar o tipo de variável da coluna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fb5b857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alterar price, extra_people\n",
+    "base_airbnb[\"price\"] = base_airbnb[\"price\"].str.replace(\"$\", \"\").str.replace(\",\", \"\")\n",
+    "base_airbnb[\"price\"] = base_airbnb[\"price\"].astype(np.float32, copy=False)\n",
+    "base_airbnb[\"extra_people\"] = base_airbnb[\"extra_people\"].str.replace(\"$\", \"\").str.replace(\",\", \"\")\n",
+    "base_airbnb[\"extra_people\"] = base_airbnb[\"extra_people\"].astype(np.float32, copy=False)\n",
+    "print(base_airbnb.dtypes)"
    ]
   }
  ],
