feat: correlacao de colunas numericas, verificando semelhança entre os dados, visando apagar possiveis dados com informações iguais

--- a/main.ipynb
+++ b/main.ipynb
@@ -842,6 +842,17 @@
     "- Exluir outliers (usaremos como regra: valores abaixo de Q1 - 1,5 x Amplitude e valores acima de Q3 + 1,5 x Amplitude) onde Amplitude = Q3 - Q1\n",
     "- Confirmar se todas as features que temos realmente fazem sentido para o nosso modelo ou se alguma delas nao irá nos ajudar ou se devemos excluí-la"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6fd264f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# analise de correlacao\n",
+    "print(base_airbnb.corr(numeric_only=True))"
+   ]
   }
  ],
  "metadata": {
