chore: criacao de metodos para construir graficos de visualizacao dos dados e remocao dos outliers das colunas pandas

--- a/main.ipynb
+++ b/main.ipynb
@@ -20,12 +20,14 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from pandas.core.series import Series"
+    "from matplotlib.axes._axes import Axes\n",
+    "from pandas.core.series import Series\n",
+    "from pandas.core.frame import DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "7f5dc540",
    "metadata": {},
    "outputs": [
@@ -33,55 +35,55 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (62,87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (62,87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n",
-      "/tmp/ipykernel_106337/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_15326/3276474334.py:5: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  month_df = pd.read_csv(base_path / file.name)\n"
      ]
     }
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "c78d0dba",
    "metadata": {},
    "outputs": [
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "e25eebef",
    "metadata": {},
    "outputs": [
@@ -611,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "ed77a10d",
    "metadata": {},
    "outputs": [
@@ -668,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "77c7797b",
    "metadata": {},
    "outputs": [
@@ -712,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "dfbf2b6b",
    "metadata": {},
    "outputs": [
@@ -788,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "4fb5b857",
    "metadata": {},
    "outputs": [
@@ -848,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "c6fd264f",
    "metadata": {},
    "outputs": [
@@ -858,7 +860,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -891,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "id": "5d597f7b",
    "metadata": {},
    "outputs": [],
@@ -902,7 +904,41 @@
     "    amplitude = third_quantile - first_quantile\n",
     "    inferior_limit = first_quantile - (1.5 * amplitude)\n",
     "    superior_limit = third_quantile + (1.5 * amplitude)\n",
-    "    return inferior_limit, superior_limit"
+    "    return inferior_limit, superior_limit\n",
+    "\n",
+    "\n",
+    "def remove_outliers(df: DataFrame, column_name: str):\n",
+    "    old_lines_number = df.shape[0]\n",
+    "    column: Series = df[column_name]\n",
+    "    inferior_limit, superior_limit = calculate_limits(column)\n",
+    "    filtered_df = df.loc[(column >= inferior_limit) and (column <= superior_limit), :]\n",
+    "    removed_line_number = old_lines_number - filtered_df.shape[0]\n",
+    "    return filtered_df, removed_line_number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "13a1891d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def boxplot_builder(column: Series):\n",
+    "    fig, (ax1, ax2) = plt.subplots(1, 2)\n",
+    "    fig.set_size_inches(15, 5)\n",
+    "    sns.boxplot(x=column, ax=ax1)\n",
+    "    ax2: Axes\n",
+    "    ax2.set_xlim(calculate_limits(column))\n",
+    "    sns.boxplot(x=column, ax=ax2)\n",
+    "\n",
+    "\n",
+    "# TODO: melhorar grafico de histograma\n",
+    "def histogram_builder(column):\n",
+    "    plt.figure(figsize=(15, 5))\n",
+    "    # sns.distplot(column, hist=True)\n",
+    "    sns.histplot(column, kde=True, stat=\"density\")\n",
+    "    # sns.displot(column)\n",
+    "\n"
    ]
   }
  ],
