chore: encode numerico para modelo nas colunas com valores object booleanos

--- a/main.ipynb
+++ b/main.ipynb
@@ -3149,7 +3149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 91,
    "id": "9ccc5875",
    "metadata": {},
    "outputs": [
@@ -3182,17 +3182,22 @@
     }
    ],
    "source": [
-    "print(base_airbnb.dtypes)"
+    "print(base_airbnb.dtypes)\n",
+    "encoded_df = base_airbnb.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 92,
    "id": "9ba6dfb3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "boolean_coluns = [\"host_is_superhost\", \"instant_bookble\", \"is_business_travel_ready\"]"
+    "boolean_coluns = [\"host_is_superhost\", \"instant_bookable\", \"is_business_travel_ready\"]\n",
+    "\n",
+    "for column in boolean_coluns:\n",
+    "    encoded_df.loc[encoded_df[column] == \"t\", column] = 1\n",
+    "    encoded_df.loc[encoded_df[column] == \"f\", column] = 0"
    ]
   },
   {
