feat: enconding das colunas texto/object do nosso dataframe

--- a/main.ipynb
+++ b/main.ipynb
@@ -3202,12 +3202,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 93,
    "id": "fccb363e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>host_is_superhost</th>\n",
+       "      <th>host_listings_count</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>accommodates</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>beds</th>\n",
+       "      <th>amenities</th>\n",
+       "      <th>price</th>\n",
+       "      <th>...</th>\n",
+       "      <th>room_type_Shared room</th>\n",
+       "      <th>bed_type_Airbed</th>\n",
+       "      <th>bed_type_Couch</th>\n",
+       "      <th>bed_type_Futon</th>\n",
+       "      <th>bed_type_Pull-out Sofa</th>\n",
+       "      <th>bed_type_Real Bed</th>\n",
+       "      <th>cancellation_policy_flexible</th>\n",
+       "      <th>cancellation_policy_moderate</th>\n",
+       "      <th>cancellation_policy_strict</th>\n",
+       "      <th>cancellation_policy_strict_14_with_grace_period</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-22.96592</td>\n",
+       "      <td>-43.17896</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>332.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-22.97712</td>\n",
+       "      <td>-43.19045</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-22.98302</td>\n",
+       "      <td>-43.21427</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>273.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-22.98816</td>\n",
+       "      <td>-43.19359</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>378.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-22.92873</td>\n",
+       "      <td>-43.17473</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>260.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   host_is_superhost  host_listings_count  latitude  longitude  accommodates  \\\n",
+       "0                  1                  2.0 -22.96592  -43.17896             5   \n",
+       "1                  0                  3.0 -22.97712  -43.19045             2   \n",
+       "2                  1                  1.0 -22.98302  -43.21427             3   \n",
+       "3                  1                  1.0 -22.98816  -43.19359             3   \n",
+       "16                 0                  2.0 -22.92873  -43.17473             4   \n",
+       "\n",
+       "    bathrooms  bedrooms  beds  amenities  price  ...  room_type_Shared room  \\\n",
+       "0         1.0       2.0   2.0         33  332.0  ...                  False   \n",
+       "1         1.0       1.0   2.0         14  160.0  ...                  False   \n",
+       "2         1.0       1.0   2.0         25  273.0  ...                  False   \n",
+       "3         1.5       1.0   2.0         33  378.0  ...                  False   \n",
+       "16        2.0       3.0   4.0         22  260.0  ...                  False   \n",
+       "\n",
+       "    bed_type_Airbed bed_type_Couch bed_type_Futon  bed_type_Pull-out Sofa  \\\n",
+       "0             False          False          False                   False   \n",
+       "1             False          False          False                   False   \n",
+       "2             False          False          False                   False   \n",
+       "3             False          False          False                   False   \n",
+       "16            False          False          False                   False   \n",
+       "\n",
+       "    bed_type_Real Bed  cancellation_policy_flexible  \\\n",
+       "0                True                         False   \n",
+       "1                True                         False   \n",
+       "2                True                         False   \n",
+       "3                True                         False   \n",
+       "16               True                         False   \n",
+       "\n",
+       "    cancellation_policy_moderate  cancellation_policy_strict  \\\n",
+       "0                          False                       False   \n",
+       "1                          False                       False   \n",
+       "2                          False                       False   \n",
+       "3                          False                       False   \n",
+       "16                         False                       False   \n",
+       "\n",
+       "    cancellation_policy_strict_14_with_grace_period  \n",
+       "0                                              True  \n",
+       "1                                              True  \n",
+       "2                                              True  \n",
+       "3                                              True  \n",
+       "16                                             True  \n",
+       "\n",
+       "[5 rows x 39 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "categories_coluns = [\"property_type\", \"room_type\", \"bed_type\", \"cancellation_policy\"]"
+    "categories_coluns = [\"property_type\", \"room_type\", \"bed_type\", \"cancellation_policy\"]\n",
+    "encoded_df = pd.get_dummies(data=encoded_df, columns=categories_coluns)\n",
+    "display(encoded_df.head())"
    ]
   },
   {
